<resources>
    <string name="app_name">AlarmClockV6</string>
    <string name="facebook_app_id">127781204598656</string>
    <string name="title_activity_scrolling">Choose when we wake you up :)</string>

    <string name="monday"> "Monday" </string>
    <string name="tuesday"> "Tuesday" </string>
    <string name="wednesday"> "Wednesday" </string>
    <string name="thursday"> "Thursday" </string>
    <string name="friday"> "Friday" </string>
    <string name="saturday"> "Saturday" </string>
    <string name="sunday"> "Sunday" </string>

    <string name="buttonSetWeek"> "Set smart alarm" </string>


    <string name="action_settings">Settings</string>

    <string name="title_activity_matrix_game">MatrixGame</string>
    <string name="title_activity_roulette_game">RouletteGame</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <string name="CREATE_TABLE_NIGHT">"create table NIGHT (ID integer primary key,GOTOBEDESTIMATED text not null, GOTOBEDREAL text,WAKEUPESTIMATED text not null, WAKEUPREAL text, SLEEPWELL int, WASLATE int);"</string>
    <string name="CREATE_TABLE_WEEK">"create table WEEK (ID integer primary key, MONDAY text, TUESDAY text, WEDNESDAY text, THURDAY text, FRIDAY text, SATURDAY text, SUNDAY text);"</string>
    <string name="CREATE_TABLE_HABITS">"create table HABITS (ID integer primary key,DAYSOFUSE integer not null, REWARDTIME integer not null,DAYSOFLATENESS integer not null, SLEEPHOURSPERNIGHT integer not null);"</string>
    <string name="CREATE_TABLE_SUCCESS">"create table SUCCESS (ID text primary key, NAME text, DESCRIPTION text, REWARD integer not null, ADVANCEMENT integer not null,  FINISHED integer);"</string>
    <string name="DROP_TABLE_HABITS">"drop table HABITS;"</string>
    <string name="DROP_TABLE_NIGHT">"drop table NIGHT;"</string>
    <string name="DROP_TABLE_WEEK">"drop table WEEK;"</string>
    <string name="DROP_TABLE_SUCCESS">"drop table SUCCESS;"</string>
    <string name="TABLE_NIGHT">"NIGHT"</string>
    <string name="TABLE_WEEK">"WEEK"</string>
    <string name="TABLE_SUCCESS">"SUCCESS"</string>
    <string name="ID">"ID"</string>
    <string name="GO_TO_BED_ESTIMATED">"GOTOBEDESTIMATED"</string>
    <string name="GO_TO_BED_REAL">"GOTOBEDREAL"</string>
    <string name="WAKE_UP_ESTIMATED">"WAKEUPESTIMATED"</string>
    <string name="WAKE_UP_REAL">"WAKEUPREAL"</string>
    <string name="SLEEP_WELL">"SLEEPWELL"</string>
    <string name="WAS_LATE">WASLATE</string>
    <string name="MONDAY">"MONDAY"</string>
    <string name="TUESDAY">"TUESDAY"</string>
    <string name="WEDNESDAY">"WEDNESDAY"</string>
    <string name="THURDAY">"THURDAY"</string>
    <string name="FRIDAY">"FRIDAY"</string>
    <string name="SATURDAY">"SATURDAY"</string>
    <string name="SUNDAY">"SUNDAY"</string>
    <string name="TABLE_HABITS">"HABITS"</string>
    <string name="DAYS_OF_USE">"DAYSOFUSE"</string>
    <string name="DAYS_OF_LATENESS">"DAYSOFLATENESS"</string>
    <string name="REWARD_TIME">"REWARDTIME"</string>
    <string name="SLEEP_HOURS_PER_NIGHT">"SLEEPHOURSPERNIGHT"</string>
    <string name="NAME">"NAME"</string>
    <string name="DESCRIPTION">"DESCRIPTION"</string>
    <string name="REWARD">"REWARD"</string>
    <string name="ADVANCEMENT">"ADVANCEMENT"</string>
    <string name="FINISHED">"FINISHED"</string>

</resources>
